--- a/front/tema/fondo.css
+++ b/front/tema/fondo.css
@@ -1,4 +1,23 @@
-.fondo{
-    background-color: rgba(16, 16, 16, 0.1);
-    background-image: linear-gradient(180deg, rgba(37,37,37,0.7511379551820728) 70%, rgba(66,66,66,0.23573179271708689) 90%);
+@font-face {
+    font-family: "fuentePpal";
+    src: url('./fuente/fuentePpal.ttf');
 }
+
+*{
+
+   font-family: fuentePpal,sans-serif;
+   font-size: 1.02em;
+   font-weight:bold;
+
+}
+
+#alerta{
+    font-size: 11pt;
+    font-weight:lighter;
+    font-family: inherit;
+}
+
+/*.fondo{
+    background-image: linear-gradient(180deg, rgba(49, 49, 49, 0.391) 85%,
+     rgba(37, 37, 37, 0) 100%);
+}*/
