--- a/front/tema/fondo.css
+++ b/front/tema/fondo.css
@@ -11,13 +11,21 @@
 
 }
 
+.fondo{
+    background-color: rgb(251, 251, 251);
+}
+
+.fondo:hover{
+    background-color: rgb(228, 228, 228);
+}
+
+.carousel-item{
+    min-height: 280px;
+}
+
 #alerta{
     font-size: 11pt;
     font-weight:lighter;
     font-family: inherit;
 }
 
-/*.fondo{
-    background-image: linear-gradient(180deg, rgba(49, 49, 49, 0.391) 85%,
-     rgba(37, 37, 37, 0) 100%);
-}*/
