--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
@@ -14,8 +14,7 @@
 	
 	            <div class="mx-auto">
 	
-	                <p class="text-center" id="alerta">&#128133; Cierra los ojos y piensa en algo bonito... , quiérete
-	                    como nadie, Quiérete Mucho. &#128135;</p>
+	                <p class="text-center" id="alerta">&#128133; <span th:text="${alertContext}">Quiérete mucho</span> &#128135;</p>
 	
 	            </div>
 	
