--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
@@ -93,42 +93,57 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<form action="POST" class="py-5 my-auto mx-auto w-75">
+	<form method="POST" th:action="addProduct" th:object="${productRegForm}" class="my-auto mx-auto w-75 py-4">
 	
-	       <legend class="text-center mb-3 fw-lighter">Inicio de sesión</legend>
+	        <legend class="text-center mb-3 fw-lighter">Dar de alta un servicio</legend>
 	
-	       <div class="container-fluid">
-	           <div class="row">
-	               <div class="my-1 col-12 col-lg-6">
-	                   <label for="name-field-log" class="form-label">Nombre de usuario</label>
-	                   <input type="text" class="form-control p-2" id="name-field-log" placeholder="Escriba aquí..."
-	                       name="name-log">
-	               </div>
+	        <div class="container-fluid">
+	            <div class="row">
+	                <div class="my-1 col-12 col-md-4">
+	                    <label for="name-field-reg" class="form-label">Nombre</label>
+	                    <input type="text" class="form-control p-2" id="name-field-reg" placeholder="Nombre del producto"
+	                        name="name-reg" th:field="*{name}">
+	                </div>
 	
-	               <div class="my-1 col-12 col-lg-6">
-	                   <label for="pwd-field-log" class="form-label">Contraseña</label>
-	                   <input type="password" class="form-control p-2" id="pwd-field-log" placeholder="************"
-	                       name="pwd-log">
-	               </div>
-	           </div>
+	                <div class="my-1 col-12 col-md-8">
+	                    <label for="description-field-reg" class="form-label">Descripción</label>
+	                    <input type="text" class="form-control p-2" id="description-field-reg" placeholder="Descripción del servicio"
+	                        name="description-reg" th:field="*{description}">
+	                </div>
+	            </div>
 	
-	       </div>
-	
-	       <div class="mt-4 row">
-	           <a class="text-decoration-none col-6" href="/regform" th:href="@{/regform}" target="_self">
-	               <button type="button" class="btn fondo shadow py-2 rounded-2 mx-0 text-secondary fw-bolder w-100">
-	                   Crear cuenta
-	               </button>
-	           </a>
-	           <button type="submit" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">
-	               <a class="text-decoration-none text-secondary" href="" target="_self">
-	                   Iniciar sesión
-	               </a>
-	           </button>
-	       </div>
-	
-	   </form>
+	            <div class="row">
 
+                    <div class="my-1 col-12 col-md-6">
+                        <label for="prodT-field-reg" class="form-label">Tipo de servicio</label>
+	                    <select name="prodT-field-reg" class="form-control p-2">
+                            <option th:each="type : ${T(com.salesianostriana.dam.carrascalfrancojoaquinproyectospringt2.model.ProductType).values()}" 
+                                th:value="${type}" th:text="${type}" th:field="*{prodT}"></option>
+                        </select>
+	                </div>
+	
+	                <div class="my-1 col-12 col-md-3">
+	                    <label for="avg-duration-field-reg" class="form-label">Duración</label>
+	                    <input type="text" class="form-control p-2" id="avg-duration-field-reg" placeholder="Duración promedio del servicio"
+	                        name="avg-duration-reg" th:field="*{avgDuration}">
+	                </div>
+	
+	                <div class="my-1 col-12 col-md-3">
+	                    <label for="base-price-field-reg" class="form-label">Precio base</label>
+	                    <input type="text" class="form-control p-2" id="base-price-field-reg" placeholder="Precio base del servicio"
+	                        name="base-price-reg" th:field="*{basePrice}">
+	                </div>
+	
+	            </div>
+	            
+	
+	        </div>
+	
+	        <div class="mt-4 row justify-content-center">
+	            <input type="submit" value="Dar de alta" class="col-5 col-md-3 col-lg-2 btn btn-success shadow-lg py-2 rounded-2 mx-0 "></input>
+	        </div>
+	
+	    </form>
 
 </body>
 
