--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/alertListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/alertListui.html
@@ -2,19 +2,19 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiérete Mucho</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Quiérete Mucho</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../static/css/background.css" th:href="@{/css/background.css}" >
+	<link rel="stylesheet" href="../static/css/background.css" th:href="@{/css/background.css}">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 
 </head>
@@ -41,8 +41,9 @@
 					<div class="row align-items-center justify-content-start">
 						<a class="navbar-brand col-5 mt-0" href="/" th:href="@{/}">
 
-							<img src="../../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo compañía" width="200px">
-						
+							<img src="../static/img/company-logo.png" th:src="@{img/company-logo.png}"
+								alt="Logo compañía" width="200px">
+
 						</a>
 
 						<button class="navbar-toggler rounded-2 border-0 shadow-none col-2 me-0 ms-auto " type="button"
@@ -71,7 +72,8 @@
 					<form class="d-flex flex-row justify-content-around align-items-center">
 
 						<button class="rounded-3 border-0 btn mx-1" type="button">
-							<a href="/logform" th:href="@{/logform}"><i class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
+							<a href="/logform" th:href="@{/logform}"><i
+									class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
 						</button>
 
 						<button class="rounded-3 border-0 btn mx-1 " type="button">
@@ -93,28 +95,31 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
+	<a href="/alertForm" th:href="@{/alertForm}" class="d-block mx-auto mt-3"><button
+			class="btn btn-success m-2">Agregar alerta</button></a>
+
 	<table class="table container-fluid my-4 py-4">
 		<thead>
-		  <tr class="row justify-content-center">
-			<th class="col-1">ID</th>
-			<th class="col-2">Nombre</th>
-			<th class="col-5">Descripcion</th>
-			<th class="col-1 text-center">Editar</th>
-			<th class="col-1 text-center">Borrar</th>
-			<th class="col-1 text-center">Activar</th>
-		  </tr>
+			<tr class="row justify-content-center">
+				<th class="col-1">ID</th>
+				<th class="col-2">Nombre</th>
+				<th class="col-5">Descripcion</th>
+				<th class="col-1 text-center">Editar</th>
+				<th class="col-1 text-center">Borrar</th>
+				<th class="col-1 text-center">Activar</th>
+			</tr>
 		</thead>
 		<tbody>
-		  <tr class="row justify-content-center" th:each="alert : ${alertList}">
-			<td class="col-1" th:text="${alert.id}">ID</td>
-			<td class="col-2" th:text="${alert.name}">Nombre</td>
-			<td class="col-5" th:text="${alert.description}">Descripcion</td>
-			<td class="col-1 text-center"><i class="bi bi-pencil-square"></i></td>
-			<td class="col-1 text-center"><i class="bi bi-trash3"></i></td>
-			<td class="col-1 text-center"><i class="bi bi-arrow-90deg-up"></i></td>
-		  </tr>
+			<tr class="row justify-content-center" th:each="alert : ${alertList}">
+				<td class="col-1" th:text="${alert.id}">ID</td>
+				<td class="col-2" th:text="${alert.name}">Nombre</td>
+				<td class="col-5" th:text="${alert.description}">Descripcion</td>
+				<td class="col-1 text-center"><i class="bi bi-pencil-square"></i></td>
+				<td class="col-1 text-center"><i class="bi bi-trash3"></i></td>
+				<td class="col-1 text-center"><i class="bi bi-arrow-90deg-up"></i></td>
+			</tr>
 		</tbody>
-	  </table>
+	</table>
 
 </body>
 
