--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
@@ -41,7 +41,7 @@
 					<div class="row align-items-center justify-content-start">
 						<a class="navbar-brand col-5 mt-0" href="/" th:href="@{/}">
 
-							<img src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo compañía" width="200px">
+							<img src="../static/img/company-logo.png" th:src="@{img/company-logo.png}" alt="Logo compañía" width="200px">
 						
 						</a>
 
