--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
@@ -50,8 +50,8 @@
 	                        </div>
 	                        <!-- Button trigger modal -->
 	                        <div class="" data-bs-toggle="modal" data-bs-target="#mapaModal">
-	                            <img class="img-fluid min-vw-75" src="http://placehold.co/648x480" th:src="@{http://placehold.co/648x480}"
-	                                alt="mapa de la localización del negocio.">
+	                            <img class="img-fluid" src="https://i.imgur.com/xeadxRn.png" th:src="@{https://i.imgur.com/xeadxRn.png}"
+	                                            alt="mapa de la localización del negocio.">
 	                        </div>
 	
 	                        <!-- Modal -->
@@ -66,7 +66,7 @@
 	                                            aria-label="Close"></button>
 	                                    </div>
 	                                    <div class="modal-body">
-	                                        <img class="img-fluid" src="http://placehold.co/648x480" th:src="@{http://placehold.co/648x480}"
+	                                        <img class="img-fluid" src="https://imgur.com/a/Q62Axmy" th:src="@{https://imgur.com/a/Q62Axmy}"
 	                                            alt="mapa de la localización del negocio.">
 	                                    </div>
 	                                    <div class="modal-footer">
