--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
@@ -93,7 +93,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<form method="POST" th:action="addProduct" th:object="${productRegForm}" class="my-auto mx-auto w-75 py-4">
+	<form method="POST" th:action="${productRegForm.id != 0} ? @{/editProduct/submit} : @{/addProduct/submit}" th:object="${productRegForm}" class="my-auto mx-auto w-75 py-4">
 	
 	        <legend class="text-center mb-3 fw-lighter">Dar de alta un servicio</legend>
 	
@@ -141,7 +141,7 @@
 	        </div>
 	
 	        <div class="mt-4 row justify-content-center">
-	            <input type="submit" value="Dar de alta" class="col-5 col-md-3 col-lg-2 btn btn-success shadow-lg py-2 rounded-2 mx-0 "></input>
+	            <input type="submit" value="Enviar" class="col-5 col-md-3 col-lg-2 btn btn-success shadow-lg py-2 rounded-2 mx-0 "></input>
 	        </div>
 	
 	    </form>
