se añade un modal con un mapa interactivo de google maps

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
@@ -65,9 +65,8 @@
 	                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
 	                                            aria-label="Close"></button>
 	                                    </div>
-	                                    <div class="modal-body">
-	                                        <img class="img-fluid" src="https://imgur.com/a/Q62Axmy" th:src="@{https://imgur.com/a/Q62Axmy}"
-	                                            alt="mapa de la localización del negocio.">
+	                                    <div class="modal-body ratio ratio-1x1">
+	                                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d793.5790442163968!2d-6.0602059!3d37.2876397!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1272c9202ad4ed%3A0x5791fb7c99ced34d!2sQuierete%20Mucho!5e0!3m2!1ses!2ses!4v1714935198723!5m2!1ses!2ses" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	                                    </div>
 	                                    <div class="modal-footer">
 	                                        <button type="button" class="btn btn-secondary"
