solucion de relacion linea de reserva - reserva

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
@@ -21,7 +21,7 @@
 
 <!--Menú de navegación-->
 
-<header th:fragment="header">
+<header>
 	<div class="container-fluid my-2">
 
 		<div class="container-fluid pt-1">
