--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productReg.html
@@ -136,8 +136,19 @@
 	                </div>
 	
 	            </div>
+
+				<div class="row justify-content-center">
+
+					<div class="my-1 col-12 col-lg-8">
+
+						<label for="img-desc-field-reg" class="form-label">URL imagen</label>
+	                    <input type="text" class="form-control p-2" id="img-desc-field-reg" placeholder="Ruta de la imagen"
+	                        name="img-desc-reg" th:field="*{descImg}">
+
+					</div>
+
+				</div>
 	            
-	
 	        </div>
 	
 	        <div class="mt-4 row justify-content-center">
