--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
@@ -138,7 +138,7 @@
 			
 			<div th:each="product : ${productList}" class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow"
 			                style="width: 18rem;">
-			                <img class="card-img-top mt-3 rounded-3" src="product.descImg" th:src="@{product.descImg}"
+			                <img class="card-img-top mt-3 rounded-3" src="http://placehold.co/500x500" th:src="${product.descImg}"
 			                    alt="Card image cap">
 			                <div class="card-body p-3 d-flex flex-column">
 			                    <h5 class="card-title fw-bolder" th:text="${product.name}">Nombre</h5>
