listado user para admin

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
@@ -101,6 +101,7 @@
 				<li class="list-group-item text-center fw-bold"><i class="bi bi-exclamation-diamond"></i> <a class="text-decoration-none text-black" href="/alertlist" th:href="@{/alertlist}">Gestión de alertas</a> <i class="bi bi-exclamation-diamond"></i></li>
 				<!-- <li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" href="/prodForm" th:href="@{/prodForm}"><i class="bi bi-box-arrow-in-up"></i> Dar de alta un servicio <i class="bi bi-box-arrow-in-up"></i></a></li> -->
 				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" href="/prodList" th:href="@{/prodList}"><i class="bi bi-box-arrow-in-up"></i> Gestión de servicios <i class="bi bi-box-arrow-in-down"></i></a></li>
+				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" href="/clientList" th:href="@{/clientList}"><i class="bi bi-people"></i> Gestión de usuarios <i class="bi bi-people-fill"></i></a></li>
 			</ul>
 
 		</aside>
