--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -95,7 +95,7 @@
 
 	<form method="POST" th:action="${clientRegForm.id != null} ? @{/editClient/submit} : @{/addClient/submit}" th:object="${clientRegForm}" class="my-auto mx-auto w-75 py-4">
 	
-	        <legend class="text-center mb-3 fw-lighter">Registrate en nuetra web</legend>
+	        <legend class="text-center mb-3 fw-lighter" th:text="${legend}"></legend>
 	
 			<input th:if="${clientRegForm.id != 0}" type="hidden" th:field="*{id}" name="id" />
 
@@ -151,7 +151,7 @@
 	                <div class="my-1 col-12 col-md-8">
 	                    <label for="dir-field-reg" class="form-label">Dirección</label>
 	                    <input type="text" class="form-control p-2" id="dir-field-reg" placeholder="13 Rue del Percebe"
-	                        name="dir-reg" th:field="*{adress}">
+	                        name="dir-reg" th:field="*{address}">
 	                </div>
 	
 	            </div>
