--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertBlank.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertBlank.html
@@ -12,7 +12,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../static/css/background.css" th:href="@{/css/background.css}">
+    <link rel="stylesheet" href="../static/css/background.css" th:href="@{/css/background.css}" >
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -94,7 +94,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-    <form method="POST" th:action="${alertBlank.id != 0} ? @{/editAlert/submit} : @{/addAlert/submit}" th:object="${alertBlank}">
+    <form method="POST" th:action="${alertBlank.id != 0} ? @{/admin/editAlert/submit} : @{/admin/addAlert/submit}" th:object="${alertBlank}">
 
         <legend class="text-center mt-2"><span th:text="${legend}"></span></legend>
 
