--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
@@ -94,7 +94,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<a href="/alertForm" th:href="@{/alertForm}" class="d-block mx-auto mt-3"><button
+	<a th:href="@{/admin/alertForm}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar alerta</button></a>
 
 	<table class="table container-fluid my-4 py-4">
@@ -113,9 +113,9 @@
 				<td class="col-1" th:text="${alert.id}">ID</td>
 				<td class="col-2" th:text="${alert.name}">Nombre</td>
 				<td class="col-5" th:text="${alert.description}">Descripcion</td>
-				<td class="col-1 text-center"><a th:href="@{/editAlert/{id}(id=${alert.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
-				<td class="col-1 text-center"><a th:href="@{/deleteAlert/{id}(id=${alert.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
-				<td class="col-1 text-center"><a th:href="@{/activateAlert/{id}(id=${alert.id})}"><button class="btn btn-success p-1"><i class="bi bi-arrow-90deg-up"></i></button></a></td>
+				<td class="col-1 text-center"><a th:href="@{/admin/editAlert/{id}(id=${alert.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
+				<td class="col-1 text-center"><a th:href="@{/admin/deleteAlert/{id}(id=${alert.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
+				<td class="col-1 text-center"><a th:href="@{/admin/activateAlert/{id}(id=${alert.id})}"><button class="btn btn-success p-1"><i class="bi bi-arrow-90deg-up"></i></button></a></td>
 			</tr>
 		</tbody>
 	</table>
