--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
@@ -94,7 +94,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<a href="/regform" th:href="@{/regform}" class="d-block mx-auto mt-3"><button
+	<a href="/admin/regform" th:href="@{/admin/regform}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar cliente</button></a>
 
 	<table class="table container-fluid">
@@ -121,8 +121,8 @@
 				<th class="col-3 text-center" th:text="${client.email}">Email</th>
 				<th class="col-1 text-center" th:text="${client.telNumber}">Número tlf</th>
 				<th class="col-1 text-center" th:text="${client.pass}">Contraseña</th>
-				<td class="col-1 text-center"><a th:href="@{/editClient/{id}(id=${client.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
-				<td class="col-1 text-center"><a th:href="@{/deleteClient/{id}(id=${client.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
+				<td class="col-1 text-center"><a th:href="@{/admin/editClient/{id}(id=${client.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
+				<td class="col-1 text-center"><a th:href="@{/admin/deleteClient/{id}(id=${client.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
 			</tr>
 		</tbody>
 	</table>
