--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/productListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/productListui.html
@@ -94,7 +94,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<a href="/prodForm" th:href="@{/prodForm}" class="d-block mx-auto mt-3"><button
+	<a href="/admin/prodForm" th:href="@{/admin/prodForm}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar servicio</button></a>
 
         <div class="container-fluid" id="products">
@@ -115,8 +115,8 @@
                                             <p class="text-end">PVP: <span th:text="${product.basePrice}">precio</span>€</p>
                                         </div>
                                         <div class="row justify-content-">
-                                            <a class="col-6 p-1 px-3" th:href="@{/editProduct/{id}(id=${product.id})}"><button class="btn btn-primary d-block mx-auto"><i class="bi bi-pencil-square"></i></button></a>
-				                            <a class="col-6 p-1 px-3" th:href="@{/deleteProduct/{id}(id=${product.id})}"><button class="btn btn-danger d-block mx-auto"><i class="bi bi-trash3"></i></button></a>
+                                            <a class="col-6 p-1 px-3" th:href="@{/admin/editProduct/{id}(id=${product.id})}"><button class="btn btn-primary d-block mx-auto"><i class="bi bi-pencil-square"></i></button></a>
+				                            <a class="col-6 p-1 px-3" th:href="@{/admin/deleteProduct/{id}(id=${product.id})}"><button class="btn btn-danger d-block mx-auto"><i class="bi bi-trash3"></i></button></a>
                                         </div>
                                     </div>
                                 </div>
