--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -103,8 +103,8 @@
 	            <div class="row">
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="name-field-reg" class="form-label">Nombre<sup class="text-danger">*</sup></label>
-	                    <input type="text" class="form-control p-2" id="name-field-reg" placeholder="Escriba aquí su nombre..."
-	                        name="name-reg" th:field="*{userName}">
+	                    <input type="text" class="form-control p-2" id="username" placeholder="Escriba aquí su nombre..."
+	                        name="username" th:field="*{username}">
 	                </div>
 	
 	                <div class="my-1 col-12 col-md-6">
@@ -118,14 +118,14 @@
 	
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="pwd-field-reg" class="form-label">Contraseña<sup class="text-danger">*</sup></label>
-	                    <input type="password" class="form-control p-2" id="pwd-field-reg" placeholder="************"
-	                        name="pwd-reg" th:field="*{pass}">
+	                    <input type="password" class="form-control p-2" id="password" placeholder="************"
+	                        name="password" th:field="*{password}">
 	                </div>
 	
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="pwd2-field-reg" class="form-label">Repetir contraseña<sup class="text-danger">*</sup></label>
-	                    <input type="password" class="form-control p-2" id="pwd2-field-reg" placeholder="************"
-	                        name="pwd2-reg">
+	                    <input type="password" class="form-control p-2" id="password2" placeholder="************"
+	                        name="password2">
 	                </div>
 	
 	            </div>
