--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/login.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/login.html
@@ -93,7 +93,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<form action="POST" class="py-5 my-auto mx-auto w-75">
+	<form method="POST" th:action="@{/login}" class="py-5 my-auto mx-auto w-75">
 	
 	       <legend class="text-center mb-3 fw-lighter">Inicio de sesión</legend>
 	
@@ -101,14 +101,14 @@
 	           <div class="row">
 	               <div class="my-1 col-12 col-lg-6">
 	                   <label for="name-field-log" class="form-label">Nombre de usuario</label>
-	                   <input type="text" class="form-control p-2" id="name-field-log" placeholder="Escriba aquí..."
-	                       name="name-log">
+	                   <input type="text" class="form-control p-2" id="username" placeholder="Escriba aquí..."
+	                       name="username">
 	               </div>
 	
 	               <div class="my-1 col-12 col-lg-6">
 	                   <label for="pwd-field-log" class="form-label">Contraseña</label>
-	                   <input type="password" class="form-control p-2" id="pwd-field-log" placeholder="************"
-	                       name="pwd-log">
+	                   <input type="password" class="form-control p-2" id="password" placeholder="************"
+	                       name="password">
 	               </div>
 	           </div>
 	
@@ -120,11 +120,7 @@
 	                   Crear cuenta
 	               </button>
 	           </a>
-	           <button type="submit" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">
-	               <a class="text-decoration-none text-secondary" href="" target="_self">
-	                   Iniciar sesión
-	               </a>
-	           </button>
+			   <input type="submit" value="Iniciar sesión" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 "></input>
 	       </div>
 	
 	   </form>
