--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
@@ -67,7 +67,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Reclamaciones</a>
+                            <a class="nav-link" href="/reportForm" th:href="@{/reportForm}">Reclamaciones</a>
                         </li>
                     </ul>
 
