--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
 
                 <p class="text-center" id="alerta">&#128133; <span th:text="${alertContext}">Quiérete mucho</span> &#128135;</p>
 
-				<p class="text-center">Qué alegría verte de nuevo <span sec:authentication="name">Usuario</span></p>
+				<p class="text-center" sec:authorize="isAuthenticated()">Qué alegría verte de nuevo <span sec:authentication="name">Usuario</span></p>
 				
             </div>
 
@@ -73,12 +73,20 @@
 
                     <form class="d-flex flex-row justify-content-around align-items-center">
 
-                        <button class="rounded-3 border-0 btn mx-1" type="button">
-                            <a href="/logform" th:href="@{/logform}"><i class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
+                        <button class="rounded-3 border-0 btn mx-1" type="button" sec:authorize="!isAuthenticated()">
+                            <a href="/login" th:href="@{/login}"><i class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
                         </button>
 
-                        <button class="rounded-3 border-0 btn mx-1 " type="button">
-                            <a href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-person-dash text-align-center text-dark fs-3"></i></a>
+                        <button class="rounded-3 border-0 btn mx-1" type="button" sec:authorize="hasRole('ROLE_ADMIN')">
+                            <a href="/admin/" th:href="@{/admin/}"><i class="bi bi-person-fill-gear text-align-center text-warning fs-3"></i></a>
+                        </button>
+
+                        <button class="rounded-3 border-0 btn mx-1" type="button" sec:authorize="hasRole('ROLE_USER')">
+                            <a href="/user/" th:href="@{/user/}"><i class="bi bi-person-check-fill text-align-center text-primary fs-3"></i></a>
+                        </button>
+
+                        <button class="rounded-3 border-0 btn mx-1 " type="button" sec:authorize="isAuthenticated()">
+                            <a href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-person-dash text-align-center text-danger fs-3"></i></a>
                         </button>
 
                         <button class="rounded-3 border-0 btn mx-1 " type="button">
@@ -86,6 +94,8 @@
                         </button>
 
                     </form>
+
+                    <form th:action="@{/logout}" method="POST" id="logoutForm"></form>
 
                 </div>
 
@@ -99,8 +109,6 @@
 <!--Fin Menú de navegación-->
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
-
-    <form th:action="@{/logout}" method="POST" id="logoutForm"></form>
 
     <!--Carousel-->
 
