--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -102,30 +102,42 @@
 			<input th:if="${clientRegForm.id != 0}" type="hidden" th:field="*{admin}" name="isAdmin" />
 
 	        <div class="container-fluid">
+
+				<div class="row justify-content-center">
+
+					<div class="my-1 col-12 col-md-6">
+	                    <label for="username" class="form-label">Nombre de usuario<sup class="text-danger">*</sup></label>
+	                    <input type="text" class="form-control p-2" id="username" placeholder="Escriba aquí el nombre de su usuario..."
+	                        name="username" th:field="*{username}" required>
+	                </div>
+
+				</div>
+
 	            <div class="row">
-	                <div class="my-1 col-12 col-md-6">
-	                    <label for="name-field-reg" class="form-label">Nombre<sup class="text-danger">*</sup></label>
-	                    <input type="text" class="form-control p-2" id="username" placeholder="Escriba aquí su nombre..."
-	                        name="username" th:field="*{username}">
+
+					<div class="my-1 col-12 col-md-6">
+	                    <label for="name" class="form-label">Nombre<sup class="text-danger">*</sup></label>
+	                    <input type="text" class="form-control p-2" id="name" placeholder="Escriba aquí su nombre real"
+	                        name="name" th:field="*{name}" required>
 	                </div>
 	
 	                <div class="my-1 col-12 col-md-6">
-	                    <label for="last-name-field-reg" class="form-label">Apellido<sup class="text-danger">*</sup></label>
-	                    <input type="text" class="form-control p-2" id="last-name-field-reg" placeholder="Escriba aquí su primer apellido..."
-	                        name="last-name-reg" th:field="*{userLastName}">
+	                    <label for="userLastName" class="form-label">Apellido<sup class="text-danger">*</sup></label>
+	                    <input type="text" class="form-control p-2" id="userLastName" placeholder="Escriba aquí su primer apellido..."
+	                        name="userLastName" th:field="*{userLastName}" required>
 	                </div>
 	            </div>
 	
 	            <div class="row">
 	
 	                <div class="my-1 col-12 col-md-6">
-	                    <label for="pwd-field-reg" class="form-label">Contraseña<sup class="text-danger">*</sup></label>
+	                    <label for="password" class="form-label">Contraseña<sup class="text-danger">*</sup></label>
 	                    <input type="password" class="form-control p-2" id="password" placeholder="************"
-	                        name="password" th:field="*{password}">
+	                        name="password" th:field="*{password}" required>
 	                </div>
 	
 	                <div class="my-1 col-12 col-md-6">
-	                    <label for="pwd2-field-reg" class="form-label">Repetir contraseña<sup class="text-danger">*</sup></label>
+	                    <label for="password2" class="form-label">Repetir contraseña<sup class="text-danger">*</sup></label>
 	                    <input type="password" class="form-control p-2" id="password2" placeholder="************"
 	                        name="password2">
 	                </div>
@@ -135,9 +147,9 @@
 	            <div class="row">
 	
 	                <div class="mb-1 col-12">
-	                    <label for="email-field-reg" class="form-label">Email<sup class="text-danger">*</sup></label>
-	                    <input type="email" class="form-control p-2" id="email-field-reg"
-	                        placeholder="correo@email.com" name="email-reg" th:field="*{email}">
+	                    <label for="email" class="form-label">Email<sup class="text-danger">*</sup></label>
+	                    <input type="email" class="form-control p-2" id="email"
+	                        placeholder="correo@email.com" name="email" th:field="*{email}" required>
 	                </div>
 	    
 	            </div>
@@ -146,13 +158,13 @@
 	
 	                <div class="my-1 col-12 col-md-4">
 	                    <label for="ntelf-field-reg" class="form-label">Número de teléfono<sup class="text-danger">*</sup></label>
-	                    <input type="text" class="form-control p-2" id="ntelf-field-reg" placeholder="111222333"
-	                        name="ntelf-reg" th:field="*{telNumber}">
+	                    <input type="text" class="form-control p-2" id="ntelf-field-reg" placeholder="ej: 555777888"
+	                        name="ntelf-reg" th:field="*{telNumber}" required>
 	                </div>
 	
 	                <div class="my-1 col-12 col-md-8">
 	                    <label for="dir-field-reg" class="form-label">Dirección</label>
-	                    <input type="text" class="form-control p-2" id="dir-field-reg" placeholder="13 Rue del Percebe"
+	                    <input type="text" class="form-control p-2" id="dir-field-reg" placeholder="13, Rue del Percebe"
 	                        name="dir-reg" th:field="*{address}">
 	                </div>
 	
@@ -164,7 +176,7 @@
 	        <p class="text-danger fw-bold mx-1 px-1 pt-2">El asterisco rojo (*) significa = Campo obligatorio</p>
 	
 	        <div class="mt-4 row">
-	            <a class="text-decoration-none col-6" href="/logform" th:href="@{/logform}" target="_self">
+	            <a class="text-decoration-none col-6" href="/login" th:href="@{/login}" target="_self">
 	                <button type="button" class="btn fondo shadow py-2 rounded-2 mx-0 text-secondary fw-bolder w-100">
 	                    Iniciar sesión
 	                </button>
