--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
@@ -30,11 +30,12 @@
 	<div class="wrapper container-fluid row min-vh-100">
 		<aside class="col-12 col-md-4 col-xxl-2 shadow">
 
-			<h5 class="mt-1 p-2 border-1 bg-warning text-light rounded-2 text-center">&#128133;Menú de gestión&#128135;</h5>
+			<h5 class="mt-1 p-2 border-3 border border-warning rounded-pill text-center"><i class="bi bi-arrow-down-right-square"></i> Menú de <span sec:authentication="principal.name">Usuario</span> <i class="bi bi-arrow-up-left-square"></i></h5>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item text-center fw-bold"><i class="bi bi-exclamation-diamond"></i> <a class="text-decoration-none text-black" th:href="@{/admin/alertlist}">Gestión de alertas</a> <i class="bi bi-exclamation-diamond"></i></li>
 				<!-- <li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" href="/prodForm" th:href="@{/prodForm}"><i class="bi bi-box-arrow-in-up"></i> Dar de alta un servicio <i class="bi bi-box-arrow-in-up"></i></a></li> -->
 				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/prodList}"><i class="bi bi-box-arrow-in-up"></i> Gestión de servicios <i class="bi bi-box-arrow-in-down"></i></a></li>
+				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/reportList}"><i class="bi bi-chat-right-dots"></i> Gestión de reclamaciones <i class="bi bi-chat-left-dots"></i></a></li>
 				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/clientList}"><i class="bi bi-people"></i> Gestión de usuarios <i class="bi bi-people-fill"></i></a></li>
 			</ul>
 
